# job-hunter

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  _resume_text.txt  _search_debug.html  app.py  opencode.json  project-bootstrap-guide.md  pyproject.toml  requirements.txt  test_pipeline.py
.agent/rules/: project.md
.claude/: settings.local.json
.claude/commands/: complete-phase.md  log.md  review.md  start-phase.md  sync-docs.md  track.md
config/: app.yaml  constants.yaml  platform.yaml  screening.yaml  user.yaml
data/: explore_apply_api_captured.json  naukri_apply_form.json  naukri_apply_form_detailed.json  profile.json  profile_detailed.yaml  resume_hash.txt  run_history.json
docs/: developer-guideline.md  job-hunter-agent-prd.md  job-hunter-plan.md  migration-guide.md
output/: shortlist_20260404_221740.csv  shortlist_20260404_222034.csv  shortlist_20260405_082804.csv  shortlist_20260405_164214.csv  shortlist_20260405_204324.csv  shortlist_20260405_204632.csv  shortlist_20260405_205305.csv  shortlist_20260405_220717.csv  shortlist_20260405_221027.csv  shortlist_20260405_223728.csv  shortlist_20260405_224905.csv
scripts/: check-history-reminder.sh  check-sdd-compliance.sh  explore_apply_api.py  explore_naukri_apply.py  pre-commit  test_apply_flow.py  test_complete_apply.py
specs/: README.md  status.md
src/: chat_engine.py  document_processor.py  retriever.py
tests/: test_chat_engine.py  test_config.py  test_document_processor.py  test_naukri_apply.py  test_retriever.py
(+108 files in other folders)
